<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/customer_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/customer_code"
        android:layout_below="@+id/customer_code"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/customer_code"
        android:layout_toRightOf="@+id/customer_code"
        android:text="@string/scan" />

    <Button
        android:id="@+id/sale_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/sale_product" />

    <Button
        android:id="@+id/redeem_gilf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/sale_product"
        android:text="@string/redeem_gilf" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scan"
        android:layout_alignRight="@+id/scan"
        android:layout_below="@+id/scan"
        android:text="@string/send_info" />

    <Button
        android:id="@+id/list_sale_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sale_product"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/list_sale_day" />

    <RadioGroup
        android:id="@+id/radioSale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/sale_product"
            android:layout_below="@+id/amount" >

        <RadioButton
            android:id="@+id/mua_hang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:checked="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/mua_hang" />

        <RadioButton
            android:id="@+id/checkin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/checkin" />
    </RadioGroup>

</RelativeLayout>